# esp_web-server

./: README.md
building blocks/sleep/: deep_sleep.c
main/: CMakeLists.txt  main.c  server.h  server_callbacks.h
main/pinInit/: pinInit.c  pinInit.h
site/src/: App.tsx
